2004-11-20  Bart Veer  <bartv@ecoscentric.com>

	* cdl/io_flash.cdl, src/flash.c(cyg_flash_read): add an interface
	for hardware which requires indirect reads, and suppress
	unnecessary code if direct reads are always available.
	* src/flash.c: rearrange loops to avoid address comparisons, which
	tend to go wrong if the flash is at the end of the address space

2004-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/legacy_dev.c (legacy_flash_init): The end is the size plus
	the start.

2004-09-30  Savin Zlobec <savin@elatec.si>

	* src/flash.c: Offset into the block is not calculated correctly
	when the flash start is not aligned on a flash block.
	* src/legacy_dev.c (legacy_flash_read): Fixed typo.

2004-09-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c (cyg_flash_init): Add assert checking that the
	end address matches the block information.
	* src/legacy_dev.c (legacy_flash_init): Ensure that the end
	address is the last valid address, not the first invalid address.

2004-09-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flash.c: Support flash blocks of arbitary size. The
	DataFlash devices for example have block of 528 bytes.

2004-08-21  Andrew Lunn  <andrew.lunn@ascom.ch>

        * removed the functions cyg_flash_get_limits and
	cyg_flash_get_block_info. Reimplemented the legacy functions
	that depended on them and flashiodev.c
	
2004-08-19  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/flashiodev.c Ordering problem again. If an invalid name is
	configured the lookup would fail and it then was impossible to do
	a cyg_io_config_set. Lookup cannot fail because the name does not
	exist in FIS.

2004-08-13  Andrew Lunn  <andrew.lunn@ascom.ch>

        * src/flash.c: Make the flock lock/unlock code compile without
	warnings.
	* src/flashiodev.c (flashiodev_lookup): Only initialize the device
	if we have not already been initialized via cyg_set_config().
	This stopped redboots mount -f working.

2004-08-09  Andrew Lunn  <andrew.lunn@ascom.ch>
